fixing audio not playing on iphone

--- a/src/components/WaveSurface/index.css
+++ b/src/components/WaveSurface/index.css
@@ -25,8 +25,8 @@
 }
 
 .waveform-buttons .w-button {
-  width: 38px;
-  height: 38px;
+  width: 43px;
+  height: 43px;
   display: flex;
   align-items: center;
   justify-content: center;
